# relizene_fastapi_bookread

./: .gitignore  Dockerfile.multistage  LICENSE  README.md  docker-compose.yml  main.py  pdf.py  pyproject.toml  requirements.txt
